--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 * { margin:0; padding:0; }
 article, aside, figure, footer, header, hgroup, nav, section { display:block; }
 a img{ border-style:none;}
+ul{ list-style-position: inside;}
 
 
 
@@ -31,7 +32,7 @@ a img{ border-style:none;}
 html{
 	background: #26282c;
 	font-family: Calibri, Arial, sans-serif;
-	color: #e4e0e0;
+	color: #fff;
 }
 
 body{
@@ -77,6 +78,8 @@ h2{
 	font-size: 2.5em;
 	font-family: Arial, sans-serif;
 	font-weight: normal;
+	text-align: center;
+	color: #3aeff2;
 }
 h3{
 	font-size: 1.3em;
@@ -90,13 +93,15 @@ li{
 	font-size: 1.1em;
 }
 a{
-	color: #008abf;
+	color: #faf348;
+    text-decoration: none;	
 }
 a:hover{
-	color: #3fb9e7;
+	color: #3aeff2;
 }
 
 nav{
+	display: none;
 	float: right;
 	margin-right: 50px;
 	margin-top: 115px;
@@ -130,15 +135,12 @@ nav a:hover{
 	text-decoration: underline;
 }
 
-#content{
-	width:1200px;
-	height:300px;
-	margin: 130px auto 0;
-}
-#mainContent{
-	width:1200px;
-	height:300px;
+.content{
+	width:1000px;
 	margin: 30px auto 0;
+	background: #13151b;
+	padding: 10px;
+    overflow: auto;
 }
 
 .projectThumbLink{
@@ -191,11 +193,15 @@ nav a:hover{
 
 .side-left{
 	float: left;
-	margin-bottom: 30px;
+	margin-bottom: 10px;
+	margin-left: 20%;
+	width: 30%;
 }
 .side-right{
 	float: right;
 	margin-bottom: 30px;
+	margin-right: 20%;
+	width: 30%;
 }
 
 .bulletpoints_container{
@@ -326,7 +332,7 @@ a.control_next, a.control_next2 {
 }
 
 @media screen and (max-width: 1270px){
-	#content, #mainContent{
+	.content{
 		width: 95%;
 	}
 }
@@ -375,14 +381,16 @@ a.control_next, a.control_next2 {
 	
 	.side-left{
 		clear:both;
+		float: left;
 		width:100% !important;
-		margin-left: 0 !important;
-		margin-top: 0 !important;
+		margin: 0 !important;
+		padding-left: 0% !important;
 	}
 	.side-right{
 		clear:both;
+		float: left;
 		width:100% !important;
-		margin-left: 0 !important;
-		margin-top: 0 !important;
+		margin: 0 !important;
+		padding-left: 0% !important;
 	}
 }
