--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ body{
 	width: 100%;
 	height: 168px;
 	background: #1a1b1f url("img/bg_header.png") center repeat-x;
+	margin-bottom: 5%;
 }
 
 header{
@@ -54,18 +55,30 @@ header{
 }
 
 
-#logo{
-	float: left;
-	width: 211px;
-	height: 146px;
-	margin-top: 10px;
-	margin-left: 10%;
-	color: #008bbd;
+#logo {
+    position: absolute;
+    top: 15px;
+    left: 36%;
+    width: 28%;
+    max-width: 530px;
+    -webkit-animation:spin 2s ease-in-out infinite alternate;
+    -moz-animation:spin 2s ease-in-out infinite alternate;
+    animation:spin 2s ease-in-out infinite alternate;
 }
+@-moz-keyframes spin { 0% { -moz-transform: rotate(5deg); } }
+					100% { -webkit-transform: rotate(-5deg); }}
+@-webkit-keyframes spin { 0% { -webkit-transform: rotate(5deg); }
+					100% { -webkit-transform: rotate(-5deg); }}
+@keyframes spin { 0% { -webkit-transform: rotate(5deg); transform:rotate(5deg); }
+					100% { -webkit-transform: rotate(-5deg); transform:rotate(-5deg); }}
+
+#logo img{
+	width: 100%;
+}
+
 h1{
 	clear: both;
 	width: 100%;
-	margin-bottom: 10px;
 	font-size: 3em;
 	font-family: Arial, sans-serif;
 	font-weight: normal;
@@ -73,8 +86,6 @@ h1{
 }
 h2{
 	clear: both;
-	width: 100%;
-	margin-bottom: 10px;
 	font-size: 2.5em;
 	font-family: Arial, sans-serif;
 	font-weight: normal;
@@ -136,10 +147,10 @@ nav a:hover{
 }
 
 .content{
-	width:1000px;
-	margin: 30px auto 0;
+	width:900px;
+	margin: 30px auto 30px;
 	background: #13151b;
-	padding: 10px;
+	padding: 20px 50px;
     overflow: auto;
 }
 
@@ -194,13 +205,13 @@ nav a:hover{
 .side-left{
 	float: left;
 	margin-bottom: 10px;
-	margin-left: 20%;
+	margin-left: 25%;
 	width: 30%;
 }
 .side-right{
 	float: right;
 	margin-bottom: 30px;
-	margin-right: 20%;
+	margin-right: 15%;
 	width: 30%;
 }
 
@@ -323,74 +334,41 @@ a.control_next, a.control_next2 {
 
 
 /*///// responsive stuff /////*/
-@media screen and (max-width: 1400px){
-	header{
-		width: 100%;
-	}
-	
-	
-}
 
-@media screen and (max-width: 1270px){
+@media screen and (max-width: 1100px){
 	.content{
-		width: 95%;
-	}
-}
-
-@media screen and (max-width: 850px){
-	header:after{
-		content: "";
-		display: block;
-		background: url("img/alien.png") no-repeat;
-		width: 0px;
-		height: 0px;
-		float: left;
-		margin: 0px;
-	}
-}
-
-@media screen and (max-width: 800px){	
-	h1{
-		position: absolute;
-		top: 10px;
-		left: 15px;
-		margin: 0;
+		width: 80%;
 	}
 	
-	nav{
-		margin-right: 15px;
+	#top{
+		margin-bottom: 30px;
 	}
-	nav a{
-		clear: both;
-		margin-bottom: 10px;
-		font-size: 30px;
+	
+	
+	#logo {
+		width: 300px;
+		left: 30px;
+		top: 10px;
 	}
-	.navBtn{
-		float: right;
-	}
-	#btnResume{
-		clear: both;
-		margin-bottom: 10px;
-	}
-	#cv{
-		position: static;
-	}
+	
+}
+
+
+@media screen and (max-width: 850px){	
+	
 	#content{
 		width: 90%;
+		padding: 20px;
 	}
 	
 	.side-left{
-		clear:both;
-		float: left;
-		width:100% !important;
+		width:40% !important;
 		margin: 0 !important;
-		padding-left: 0% !important;
+		padding-left: 5% !important;
 	}
 	.side-right{
-		clear:both;
-		float: left;
-		width:100% !important;
+		width:40% !important;
 		margin: 0 !important;
-		padding-left: 0% !important;
+		padding-left: 5% !important;
 	}
 }
